# pymath

./: .gitignore  AGENTS.md  Cargo.toml  README.md  check_constants.c  tgamma.c
.github/workflows/: rust.yml
proptest-regressions/: cmath.txt  gamma.txt  math.txt
proptest-regressions/cmath/: misc.txt  trigonometric.txt
proptest-regressions/math/: aggregate.txt  exponential.txt  gamma.txt  integer.txt  misc.txt
src/: cmath.rs  err.rs  gamma.rs  lib.rs  m.rs  m_rust.rs  m_sys.rs  math.rs  test.rs
src/cmath/: exponential.rs  misc.rs  trigonometric.rs
src/math/: aggregate.rs  bigint.rs  exponential.rs  gamma.rs  integer.rs  misc.rs  trigonometric.rs
