[package]
name = "pymath"
version = "0.0.1"
edition = "2024"
description = "A binary representation compatible Rust implementation of Python's math library."
license = "PSF-2.0"


[features]
# Turning on this feature on aarch64-apple-darwin helps bit representation compatibility
# See also: https://github.com/python/cpython/issues/132763
mul_add = []

[dependencies]
errno = "0.3"
libc = "0.2"

[dev-dependencies]
proptest = "1.6.0"
pyo3 = { version = "0.24", features = ["abi3"] }
