[package]
name = "pymath"
authors = ["Jeong, YunWon <jeong@youknowone.org>"]
repository = "https://github.com/RustPython/pymath"
description = "A binary representation compatible Rust implementation of Python's math library."
version = "0.1.3"
edition = "2024"
license = "PSF-2.0"

[features]
default = ["complex"]
complex = ["dep:num-complex"]
num-bigint = ["_bigint", "dep:num-bigint"]
malachite-bigint = ["_bigint", "dep:malachite-bigint"]
_bigint = ["dep:num-traits", "dep:num-integer"]  # Internal feature. User must use num-bigint or malachite-bigint instead.

# Do not enable this feature unless you really need it.
# CPython didn't intend to use FMA for its math library.
# This project uses this feature in CI to verify the code doesn't have additional bugs on aarch64-apple-darwin.
# However, this does not mean that using this feature is better or more correct on that platform.
# Note that the quality of the results has been well-tested without FMA but has not been tested with FMA.
# See also: https://github.com/python/cpython/issues/132763
mul_add = []

# For WASM and other targets without native libm
[target.'cfg(not(any(unix, windows)))'.dependencies]
libm = "0.2"

[dependencies]
libc = "0.2"
num-complex = { version = "0.4", optional = true }
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
num-integer = { version = "0.1", optional = true }
malachite-bigint = { version = "0", optional = true }  # malachite upgrades minor version a lot

[dev-dependencies]
proptest = "1.6.0"
pyo3 = { version = "0.27", features = ["abi3", "auto-initialize"] }
